# matrix-ad-esp32

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/include/AP/: AP.c  AP.h  AP_secret.h
main/include/WEB/: WEB.c  WEB.h  html_resps.h
main/include/clock/: clock.c  clock.h
main/include/display/: defines.h  display.c  display.h  max7219.c  max7219.h  maxCharMap.c  maxCharMap.h
main/include/global/: global.c  global.h
main/include/text_cont/: text_cont.c  text_cont.h
